--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "mysql2": "^3.9.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "socket.io": "^4.7.5"
