--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mysql2": "^3.9.7",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-kakao": "^1.0.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "socket.io": "^4.7.5"
